--- a/demo_apl_start.yml
+++ b/demo_apl_start.yml
@@ -1,16 +1,7 @@
 - name: Start demo apl
-  hosts: all
+  hosts: demo_server
   tasks:
 
     - name: start
       ansible.builtin.shell:
         cmd: podman start sample-apl
-        
-    - name: check
-      ansible.builtin.shell:
-        cmd: sudo systemctl status httpd
-      register: result
-
-    - name: debug
-      ansible.builtin.debug:
-        var: result
