--- a/redmine_post_issue.yml
+++ b/redmine_post_issue.yml
@@ -6,6 +6,8 @@
         url: http://{{ ip_address }}:3000/issues.json
         method: POST
         body_format: json
+        status_code: 201
+        return_content: true
         headers:
           Content-Type: application/json
           X-Redmine-API-Key: "{{ api_key }}"
