--- a/redmine_put_issue.yml
+++ b/redmine_put_issue.yml
@@ -14,7 +14,7 @@
         body: |-
           {
             "issue": {
-              "status_id": "5"
+              "status_id": "{{ status_id }}"
             }
           }
       register: result
