--- a/rulebooks/test-rulebook.yml
+++ b/rulebooks/test-rulebook.yml
@@ -11,5 +11,6 @@
     - name: Say Hello
       condition: event.payload.message == "sakana"
       action:
-        run_playbook:
-          name: test_playbook.yml
+        run_job_template:
+          name: test_playbook
+          organization: Default
