--- a/test_playbook2.yml
+++ b/test_playbook2.yml
@@ -6,40 +6,4 @@
   tasks:
     - name: debug project_id
       ansible.builtin.debug:
-        msg: "project_id = {{ issue.project_id }}"
-    
-    - name: debug tracker_id
-      ansible.builtin.debug:
-        msg: "tracker_id = {{ issue.tracker_id }}"
-    
-    - name: debug subject
-      ansible.builtin.debug:
-        msg: "subject = {{ issue.subject }}"
-    
-    - name: debug description
-      ansible.builtin.debug:
-        msg: "description = {{ issue.description }}"
-    
-    - name: debug system_name
-      ansible.builtin.debug:
-        msg: "system_name = {{ issue.system_name }}"
-    
-    - name: debug timestamp
-      ansible.builtin.debug:
-        msg: "timestamp = {{ issue.timestamp }}"
-    
-    - name: debug err_id
-      ansible.builtin.debug:
-        msg: "err_id = {{ issue.err_id }}"
-    
-    - name: debug err_target
-      ansible.builtin.debug:
-        msg: "err_target = {{ issue.err_target }}"
-    
-    - name: debug err_code
-      ansible.builtin.debug:
-        msg: "err_code = {{ issue.err_code }}"
-    
-    - name: debug context
-      ansible.builtin.debug:
-        msg: "context = {{ issue.context }}"
+        msg: "{{ issue }}"
