--- a/rulebooks/test-rulebook2.yml
+++ b/rulebooks/test-rulebook2.yml
@@ -15,14 +15,4 @@
           name: test_playbook2
           organization: Default
           job_args:
-            issue:
-              project_id: "1"
-              tracker_id: "4"
-              subject: event.payload.subject
-              description: event.payload.description
-              system_name: event.payload.system_name
-              timestamp: event.payload.timestamp
-              err_id: event.payload.err_id
-              err_target: event.payload.err_target
-              err_code: event.payload.err_code
-              context: event.payload.context
+            issue: event.payload.subject
