--- a/rulebooks/test-rulebook2.yml
+++ b/rulebooks/test-rulebook2.yml
@@ -15,4 +15,5 @@
           name: test_playbook2
           organization: Default
           job_args:
-            issue: event.payload.subject
+            extra-vars:
+              issue: event.payload.subject
