--- a/rulebooks/test-rulebook2.yml
+++ b/rulebooks/test-rulebook2.yml
@@ -9,10 +9,7 @@
 
   rules:
     - name: Data send
-      condition: 
-        all:
-          - event.payload.datatype == "trouble"
-          - event.payload.subject is defined
+      condition: event.payload.datatype == "trouble"
       action:
         run_job_template:
           name: test_playbook2
