--- a/rulebooks/error-recieve-rulebook.yml
+++ b/rulebooks/error-recieve-rulebook.yml
@@ -9,17 +9,17 @@
 
   rules:
     - name: Error Recieve
-      condition: event.payload.system_name is defined 
+      condition: event.payload.item.system_name is defined 
       action:
         run_job_template:
           name: test_playbook3
           organization: Default
           job_args:
             extra_vars:
-              system_name: "{{ event.payload.system_name }}"
-              timestamp: "{{ event.payload.timestamp }}"
-              err_id: "{{ event.payload.err_id }}"
-              err_target: "{{ event.payload.err_target }}"
-              err_code: "{{ event.payload.err_code }}"
-              context: "{{ event.payload.context }}"
-              memo: "{{ event.payload.memo }}" 
+              system_name: "{{ event.payload.item.system_name }}"
+              timestamp: "{{ event.payload.item.timestamp }}"
+              err_id: "{{ event.payload.item.err_id }}"
+              err_target: "{{ event.payload.item.err_target }}"
+              err_code: "{{ event.payload.item.err_code }}"
+              context: "{{ event.payload.item.context }}"
+              memo: "{{ event.payload.item.memo }}" 
