--- a/rulebooks/error-recieve-rulebook.yml
+++ b/rulebooks/error-recieve-rulebook.yml
@@ -12,8 +12,14 @@
       condition: event.payload.system_name is defined 
       action:
         run_job_template:
-          name: test_playbook2
+          name: test_playbook3
           organization: Default
           job_args:
             extra_vars:
-              issue: "{{ event.payload.system_name }}-{{ event.payload.timestamp }}"
+              system_name: "{{ event.payload.system_name }}"
+              timestamp: Test-timestamp
+              err_id: Test-err-id
+              err_target: Test-err_target
+              err_code: Test-err_code
+              context: Test-context
+              memo: Test-memo 
