--- a/rulebooks/error-recieve-rulebook.yml
+++ b/rulebooks/error-recieve-rulebook.yml
@@ -16,7 +16,7 @@
           organization: Default
           job_args:
             extra_vars:
-              system_name: "{{ event.payload.system_name }}"
+              system_name: '{{ event.payload.system_name }}'
               timestamp: Test-timestamp
               err_id: Test-err-id
               err_target: Test-err_target
