--- a/rulebooks/error-recieve-rulebook.yml
+++ b/rulebooks/error-recieve-rulebook.yml
@@ -9,20 +9,11 @@
 
   rules:
     - name: Error Recieve
-      condition: event.payload.system_name is defined 
-      vars: 
-        data: 
-          system_name": "{{ event.payload.system_name }}"
-          timestamp": "{{ event.payload.timestamp }}"
-          err_id": "{{ event.payload.err_id }}"
-          err_target": "{{ event.payload.err_target }}"
-          err_code": "{{ event.payload.err_code }}"
-          context": "{{ event.payload.context }}"
-          memo": "{{ event.payload.memo }}"  
+      condition: event.payload.system_name is defined  
       action:
         run_job_template:
           name: test_playbook2
           organization: Default
           job_args:
             extra_vars:
-              issue: "{{ data | to_json }}"
+              issue: "{ \"system_name\": \"{{ event.payload.system_name }}\", \"timestamp\": \"{{ event.payload.timestamp }}\" }"
