--- a/redmine_post_issue.yml
+++ b/redmine_post_issue.yml
@@ -1,17 +1,9 @@
 - name: redmine post issue
   hosts: demo_server
   tasks:
-    - name: Post Issue
-      ansible.builtin.uri:
-        url: http://{{ ip_address }}:3000/issues.json
-        method: POST
-        body_format: json
-        status_code: 201
-        return_content: true
-        headers:
-          Content-Type: application/json
-          X-Redmine-API-Key: "{{ api_key }}"
-        body: |-
+    - name: Parameter Create
+      vars:
+        data: |-
           {
             "issue": {
               "project_id": "{{ project_id }}",
@@ -27,7 +19,21 @@
                 {"id":6,"value":"{{ context }}"}
               ]
             }
-          }
+          } 
+      ansible.builtin.debug:
+        var: data
+
+    - name: Post Issue
+      ansible.builtin.uri:
+        url: http://{{ ip_address }}:3000/issues.json
+        method: POST
+        body_format: json
+        status_code: 201
+        return_content: true
+        headers:
+          Content-Type: application/json
+          X-Redmine-API-Key: "{{ api_key }}"
+        body: "{{ data }}"
       register: result
 
     - name: debug
