--- a/redmine_post_issue.yml
+++ b/redmine_post_issue.yml
@@ -1,9 +1,17 @@
 - name: redmine post issue
   hosts: demo_server
   tasks:
-    - name: Parameter Create
-      vars:
-        data: |-
+    - name: Post Issue
+      ansible.builtin.uri:
+        url: http://{{ ip_address }}:3000/issues.json
+        method: POST
+        body_format: json
+        status_code: 201
+        return_content: true
+        headers:
+          Content-Type: application/json
+          X-Redmine-API-Key: "{{ api_key }}"
+        body: |- 
           {
             "issue": {
               "project_id": "{{ project_id }}",
@@ -20,20 +28,6 @@
               ]
             }
           } 
-      ansible.builtin.debug:
-        var: data
-
-    - name: Post Issue
-      ansible.builtin.uri:
-        url: http://{{ ip_address }}:3000/issues.json
-        method: POST
-        body_format: json
-        status_code: 201
-        return_content: true
-        headers:
-          Content-Type: application/json
-          X-Redmine-API-Key: "{{ api_key }}"
-        body: "{{ data }}"
       register: result
 
     - name: debug
