--- a/rulebooks/reboot-rulebook.yml
+++ b/rulebooks/reboot-rulebook.yml
@@ -15,15 +15,10 @@
             organization: Default
 
         - run_job_template:
-            name: Redmine Issue Post
+            name: Redmine Issue Context Update
             organization: Default
             job_args: 
               extra_vars: 
-                subject: '"[障害]{{ event.payload.err_id }}"'
-                description: '"{{ event.payload.context }}\n{{ event.payload.memo }}"'
-                system_name: '"{{ event.payload.system_name }}"'
-                timestamp: '"{{ event.payload.timestamp }}"'
-                err_id: '"{{ event.payload.err_id }}"'
-                err_target: '"{{ event.payload.err_target }}"'
-                err_code: '"{{ event.payload.err_code }}"'
-                context: "-"
+                ticket_no: '"{{ event.payload.ticket_no }}"'
+                status_id: '"{{ event.payload.status_id }}"'
+                context: '"{{ event.payload.context }}"'
