--- a/rulebooks/error-recieve-rulebook.yml
+++ b/rulebooks/error-recieve-rulebook.yml
@@ -21,7 +21,7 @@
             job_args: 
               extra_vars: 
                 subject: '"[障害]{{ event.payload.err_id }}"'
-                description: '"{{ event.payload.context }}\n{{ event.payload.memo }}"'
+                description: '"{{ event.payload.context }}\\n{{ event.payload.memo }}"'
                 system_name: '"{{ event.payload.system_name }}"'
                 timestamp: '"{{ event.payload.timestamp }}"'
                 err_id: '"{{ event.payload.err_id }}"'
