--- a/teams_complete_notification.yml
+++ b/teams_complete_notification.yml
@@ -36,6 +36,13 @@
                 ],
                 "markdown": true
               }
+            ],
+            "potentialAction": [
+              {
+                "@type": "HttpPOST",
+                "name": "完了依頼",
+                "target": "http://{{ eda_server }}"
+              }
             ]
           }
       register: result_put
