--- a/teams_complete_notification.yml
+++ b/teams_complete_notification.yml
@@ -41,6 +41,7 @@
               {
                 "@type": "HttpPOST",
                 "name": "完了依頼",
+                "headers": "Content-Type:application/json",
                 "target": "http://{{ eda_server }}"
               }
             ]
