--- a/teams_complete_notification.yml
+++ b/teams_complete_notification.yml
@@ -41,7 +41,7 @@
               {
                 "@type": "HttpPOST",
                 "name": "完了依頼",
-                "target": "http://{{ eda_server }}",
+                "target": "http:\/\/{{ eda_server }}",
                 "headers": [
                   {
                     "name": "content-type",
