--- a/rulebooks/reboot-rulebook.yml
+++ b/rulebooks/reboot-rulebook.yml
@@ -23,3 +23,10 @@
                 status_id: '"{{ event.payload.status_id }}"'
                 context: "2"
                 action_memo: "再起動で対応"
+
+         - run_job_template:
+            name: Teams Complete Notification
+            organization: Default
+            job_args: 
+              extra_vars: 
+                ticket_no: '"{{ event.payload.ticket_no }}"'
