--- a/rulebooks/reboot-rulebook.yml
+++ b/rulebooks/reboot-rulebook.yml
@@ -20,9 +20,9 @@
             job_args: 
               extra_vars: 
                 ticket_no: '"{{ event.payload.ticket_no }}"'
-                status_id: '"{{ event.payload.status_id }}"'
-                context: "2"
-                action_memo: "再起動で対応"
+                status_id: "2"
+                context: "Action"
+                action_memo: '"{{ event.payload.action_memo }}"'
 
          - run_job_template:
             name: Teams Complete Notification
